# FliteTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/more/dsi/iii/com/flitetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/analyze/: CMakeLists.txt
app/src/main/cpp/analyze/include/: Analyze.h  Label.h  Text.h
app/src/main/cpp/analyze/src/: Analyze.cpp  Label.cpp  Text.cpp
app/src/main/cpp/flite/: CMakeLists.txt
app/src/main/cpp/flite/include/: cst_diphone.h
app/src/main/java/more/dsi/iii/com/flitetest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/more/dsi/iii/com/flitetest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
